dataset1235/2025-2/1153765216/users/641768463/executions/3138746197_4190502342.log
== SUBMISSION (2025-08-21 18:25:01)
-- CODE: 
resultado = 180 / 4
print (Resultado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (Resultado)
           ^^^^^^^^^
NameError: name 'Resultado' is not defined. Did you mean: 'resultado'?
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (Resultado)
           ^^^^^^^^^
NameError: name 'Resultado' is not defined. Did you mean: 'resultado'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:25:16)
-- CODE: 
resultado = 180 / 4
print (resultado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
45.0
---- user output:
45.0
-- TEST CASE 2:
---- input:
x
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
